# cinder

./: .dockerignore  .gitignore  .vercelignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  neuron.toml  render.yaml
cinder-core/: Cargo.toml  build.rs
cinder-core/src/: lib.rs
cinder-desk/: Cargo.toml  tauri.conf.json
cinder-srv/: .env.example  Cargo.toml  Dockerfile
cinder-srv/migrations/: 20250101000000_initial.sql  20250707001500_session_locale_and_checkpoints.sql  20250707002000_transcript_entries.sql  20250708010000_case_insensitive_usernames.sql
cinder-srv/src/: auth.rs  config.rs  db.rs  game_manager.rs  main.rs
cinder-srv/src/game_manager/: response.rs  ui.rs
cinder-srv/src/routes/: auth.rs  game.rs  mod.rs  saves.rs
cinder-tui/: Cargo.toml
cinder-tui/src/: cli.rs  effects.rs  input.rs  main.rs  projector.rs  render.rs  theme.rs  transcript.rs
cinder-web-ui/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
cinder-web-ui/src/: App.tsx  api.ts  auth.tsx  index.css
config/agent_profiles/: profiles.toml
config/workflows/: cinder_npc_tick.toml  cinder_npc_turn.toml  cinder_turn.toml  isla_turn.toml
content/aera/: affordances.json  commands.json  hooks.json  settings.json  stats.json
content/ella/: affordances.json  commands.json  hooks.json  settings.json
content/isla/: affordances.json  commands.json  (+5 more)
docs/: isla_v2_game_draft.md  phase1_public_web_architecture.md
scripts/: render_session_transcript.py  role_completion_evaluator.py
src/: lib.rs  main.rs
(+146 files in other folders)
