[package]
name = "cinder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
neuron-app = { git = "https://github.com/9-Trinkets/neuron.git", branch = "main" }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tachyonfx = "0.20.0"
toml = "0.8"
